[gd_scene load_steps=13 format=2]

[ext_resource path="res://collisiontileset.png" type="Texture" id=1]
[ext_resource path="res://Personnage.tscn" type="PackedScene" id=2]
[ext_resource path="res://Monster.tscn" type="PackedScene" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]
[ext_resource path="res://Worldmap.gd" type="Script" id=5]
[ext_resource path="res://MousePosition.gd" type="Script" id=6]
[ext_resource path="res://CharacterDatas.gd" type="Script" id=7]
[ext_resource path="res://StatePlayer.gd" type="Script" id=8]
[ext_resource path="res://StateEnemy.gd" type="Script" id=9]
[ext_resource path="res://Button.gd" type="Script" id=10]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="TileSet" id=2]
0/name = "wall"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0
1/name = "floor"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 64, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/navigation = SubResource( 1 )
1/shapes = [  ]
1/z_index = 0
2/name = "collisiontileset.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 64, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [  ]
2/z_index = 0
3/name = "collisiontileset.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 64, 64, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shapes = [  ]
3/z_index = 0

[node name="Main" type="Node2D"]
script = ExtResource( 4 )

[node name="Worldmap" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="TileMap" type="TileMap" parent="Worldmap"]
tile_set = SubResource( 2 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 65536, 0, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 0, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 0, 0, 131072, 0, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 0, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 1, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, 131087, 0, 0, 196608, 0, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 0, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 0, 0, 196618, 1, 0, 196619, 1, 0, 196620, 1, 0, 196621, 1, 0, 196622, 1, 0, 196623, 0, 0, 262144, 0, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 0, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 0, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 0, 0, 327680, 0, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 0, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 0, 0, 393216, 0, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 0, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 0, 0, 458752, 0, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 0, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0 )

[node name="Personnage" parent="Worldmap" instance=ExtResource( 2 )]
position = Vector2( 160, 160 )

[node name="Monstre" parent="Worldmap" instance=ExtResource( 3 )]
position = Vector2( 736, 160 )

[node name="Ui" type="Control" parent="."]
margin_left = 1048.0
margin_top = 8.0
margin_right = 1216.0
margin_bottom = 224.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterDatas" type="GridContainer" parent="Ui"]
margin_left = -8.0
margin_top = 312.0
margin_right = 448.0
margin_bottom = 560.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Ui/CharacterDatas"]
margin_right = 38.0
margin_bottom = 31.0
text = "Name
"

[node name="Hp" type="Label" parent="Ui/CharacterDatas"]
margin_top = 35.0
margin_right = 38.0
margin_bottom = 49.0

[node name="Debug" type="Control" parent="Ui"]
margin_left = -8.0
margin_top = 8.0
margin_right = 384.0
margin_bottom = 120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MousePosition" type="Label" parent="Ui/Debug"]
anchor_right = 0.31
anchor_bottom = 0.111
margin_left = 8.0
margin_right = 123.92
margin_bottom = 24.024
text = "mouse position"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionToDo" type="Label" parent="Ui/Debug"]
margin_left = 8.0
margin_top = 32.0
margin_right = 48.0
margin_bottom = 63.0
text = "Todo
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Ui/Debug"]
margin_left = 48.0
margin_top = 72.0
margin_right = 160.0
margin_bottom = 104.0
text = "Fin de tour"
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatePlayer" type="Node" parent="."]
script = ExtResource( 8 )

[node name="StateEnemy" type="Node" parent="."]
script = ExtResource( 9 )
[connection signal="mouse_position" from="Worldmap" to="Ui/Debug/MousePosition" method="_on_Worldmap_mouse_position"]
[connection signal="entity_click" from="Worldmap/Personnage" to="Ui/CharacterDatas" method="_on_entity_click"]
[connection signal="entity_click" from="Worldmap/Monstre" to="Ui/CharacterDatas" method="_on_entity_click"]
[connection signal="move_entity" from="StatePlayer" to="Worldmap" method="move_entity"]
[connection signal="state_player_end" from="StatePlayer" to="Ui/Debug/Button" method="_on_StatePlayer_state_player_end"]
[connection signal="state_player_start" from="StatePlayer" to="Ui/Debug/Button" method="_on_StatePlayer_state_player_start"]
